<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEDED"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_reorder_24" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_marginTop="28sp"
            android:text="New Invoice"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="270sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_notifications_none_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="315sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_share_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="360sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_youtube_searched_for_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="CLIENT"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="AMOUNT"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="INVOICE DATE"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newInvoiceAmount"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="DESCRIPTION"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newInvoiceDate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/newInvoiceButton"
        android:layout_width="337dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black"
        android:text="CREATE"
        app:cornerRadius="0dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/clientName"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:hint="Enter Client Name"
        android:textSize="24dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:background="@drawable/textinputborder"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="cl" />

    <EditText
        android:id="@+id/newInvoiceAmount"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:hint="Enter Amount"
        android:textSize="24dp"
        android:padding="15dp"
        android:background="@drawable/textinputborder"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newInvoiceDate"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="SELECT"
        android:textSize="24dp"
        android:inputType="date"
        android:padding="15dp"
        android:textColor="@color/black"
        android:background="@drawable/textinputborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newInvoiceDesc"
        android:layout_width="337dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.233"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/calendarIcon"
        android:layout_width="33dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/newInvoiceDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newInvoiceDate"
        app:layout_constraintVertical_bias="0.565"
        app:srcCompat="@drawable/baseline_calendar_today_24" />

</androidx.constraintlayout.widget.ConstraintLayout>